--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.5",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
